fix: fixed content spacing issue

--- a/src/components/MorePosts/moreposts.module.css
+++ b/src/components/MorePosts/moreposts.module.css
@@ -7,6 +7,7 @@
   grid-area: moreposts;
   width: var(--content-width);
   max-width: var(--max-content-width);
+  margin: 0 auto;
 }
 
 .blogposts {
